--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=bigcommerce
+APP_NAME=app
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
 DB_PORT_BIND=3399
-DB_DATABASE=bigcommercedb
-DB_USERNAME=bigcommercedbuser
+DB_DATABASE=appdb
+DB_USERNAME=appdbuser
 DB_PASSWORD=es2UaAr2nVKMtuSwfetf
 
 CACHE_DRIVER=file
