--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=app
+APP_NAME=myapp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 
 DB_ROOT_PASSWORD=X83C8zM5yrs53N3hFwsR
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=mysql
 DB_PORT=3306
 DB_PORT_BIND=3399
 DB_DATABASE=appdb
