--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,10 +1,10 @@
 FROM php:7.2-fpm
 
 # Copy composer.lock and composer.json
-COPY composer.lock composer.json /var/www/
+COPY composer.lock composer.json /app/
 
 # Set working directory
-WORKDIR /var/www
+WORKDIR /app
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -36,10 +36,10 @@ RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 
 # Copy existing application directory contents
-COPY ../.. /var/www
+COPY ../.. /app
 
 # Copy existing application directory permissions
-COPY --chown=www:www ../.. /var/www
+COPY --chown=www:www ../.. /app
 
 # Change current user to www
 USER www
