--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     working_dir: /app
     volumes:
       - ./src:/app
+      - ./.env:/app/.env
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
@@ -26,6 +27,7 @@ services:
       - "443:443"
     volumes:
       - ./src:/app
+      - ./.env:/app/.env
       - ./docker/nginx/:/etc/nginx/conf.d/
     networks:
       - app-network
